src/app/details/tabs/description/description.component.scss
$small-breakpoint-width: 959px;



#details {

  display: flex;
  align-items: flex-start;
  overflow-y: auto;
  height: 100%;
  width: 100%;
  background: var(--surface);
  font-family: 'Roboto Flex', sans-serif;

  --columns: 6;
  --gap: 20px;
  --half-gap: calc(var(--gap) / 2);
  --padding: 20px;
  --column-width: max(100px, calc((var(--width) + var(--gap)) / var(--columns) - var(--gap)));
  --icon-width: 182px;
  --icon-height: 84px;


  // Switch to vertical direction on small screens
  @media (max-width: $small-breakpoint-width) {
    flex-direction: column;
  }
}

/* Content */
.content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 10px;
  width: 85%;
  height: 100%;
  padding-right: var(--half-gap);

  @media (max-width: $small-breakpoint-width) {
    width: calc(100% - 2 * var(--padding));
  }

}

/* Header */
.header {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 4px 0;
  gap: 7px;
  width: 100%;
  height: 48px;
  border-bottom: 2px solid var(--primary);
  flex-shrink: 0;


  .label {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0;
    gap: 10px;
    overflow: hidden;

    & .name {
      font-style: normal;
      font-weight: 450;
      font-size: 18px;
      line-height: 32px;
      overflow: hidden;
      white-space: nowrap;
      color: var(--on-surface);
      text-overflow: ellipsis;
    }

  }

  .details-button {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    padding: 0;
    gap: 5px;
    height: 40px;


    .details-label {
      width: 80px;
      height: 20px;
      font-style: normal;
      font-weight: 500;
      font-size: 14px;
      line-height: 20px;
      display: flex;
      align-items: center;
      text-align: center;
      letter-spacing: 0.1px;
      color: var(--primary);

    }
  }

}


/* TOC */
.toc {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  padding: 5px 0 5px var(--half-gap);
  gap: 8px;
  width: var(--column-width);
  height: 100%;
  overflow-y: auto;
  font-size: 16px;
  font-weight: 600;
  text-align: right;

  //border: 1px solid var(--primary);

  // Sticky
  position: sticky;
  top: 0;


  // Reposition on top of content on small screens and remove
  @media (max-width: $small-breakpoint-width) {
    position: relative;
    visibility: hidden;
  }

}

.custom-icon {
  width: 24px;
  height: 24px;
}

.double-arrow {
  width: 18px;
  height: 18px;
}

/* Overview */
.overview {

  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0;
  gap: 4px;
  width: 100%;
}

.update-layout {
  flex-direction: row;
  gap: 0;
}

.icon-container {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 8px;
  margin: 0 auto;
  width: var(--column-width);
  height: 100px;

  border: 1px solid #CAC4D0;
  border-radius: 16px;


  .icon {
    width: var(--icon-width);
    height: var(--icon-height);
    display: flex;

  }

  img {
    width: var(--icon-width);
    height: var(--icon-height);

  }
}


.elements-container {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.divider-container {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.divider-name-container {
  display: flex;
  align-items: center;

  width: var(--column-width);
  font-weight: 600;
  font-size: 12px;
  letter-spacing: 0.5px;
  color: var(--on-surface);
  flex-shrink: 0; // Prevent shrinking

}

.divider-line-container {
  display: flex;
  align-items: center;
  flex: 1;

  .divider {
    background: var(--outline);
    --mat-divider-width: 2px;
    width: 100%
  }
}


/** Divider to place the text in the middle   ---text--- */
.divider-name {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  //padding-top: 6px;
  //padding-bottom: 6px;

  .divider {
    background: var(--outline);
    --mat-divider-width: 2px;
  }

  .line {
    flex: 1;
  }

  .text {
    padding: 0 2px;
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: 0.15px;
    color: var(--outline);
  }

}


.content-container {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 4px 0;
  gap: 10px;
  width: 100%;


  .control-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0;
    width: var(--column-width);

    border-radius: 15px 0 0 15px;
    gap: 5px;
  }
}

.composition-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding-left: 10px;
  border-left: 2px solid var(--outline-variant);

  flex: 1;

  .item {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding: 0;
    gap: 4px;

    width: 100%;
  }

}

.element-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0;
  gap: 8px;
  width: 100%;
}

.ref-row {
  display: flex;
  flex-direction: row;
  padding: 0;
  gap: 10px;
  width: 100%;
}

.year-container {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  padding: 0;
  width: var(--column-width);
  justify-content: center;
  border-radius: 15px 0 0 15px;
  gap: 5px;
  flex-shrink: 0;

}

